# soundscape

./: .gitattributes  .gitignore  README.md
.github/workflows/: generate_json_tiles.yml  ios.yml  swift.yml
apps/ios/: .gitignore  .swiftlint.yml  Gemfile  Package.swift  Podfile
apps/ios/GuideDogs.xcodeproj/: project.pbxproj
apps/ios/GuideDogs.xcworkspace/: contents.xcworkspacedata
apps/ios/patches/: iOS-GPX-Framework+0.0.2.diff
docs/: Authoring.md  Client.md  Services.md
docs/authoring-web-client/: exporting.md  onboarding.md
docs/ios-client/: onboarding.md  overview.md
docs/ios-client/build-and-test/: build-configurations.md  localization.md  simulating-locations.md
docs/ios-client/components/: audio-engine.md  callout-designs.md  data-caching.md  geocoder-and-location-design.md  geolocation-manager.md  heading-in-soundscape.md  intersections-callout-logic.md  logging.md  push-notifications.md
docs/services/: data-plane-schema.md
svcs/data/: .gitignore  Dockerfile.ingest  Dockerfile.tilesrv  README.md  config.json  docker-compose.yml  enumerate_tiles.py  extracts.json  gentiles.py  getTiles.sql  ingest.py  ingest_simple.py  kubescape.py  make_static_tiles.py  mapping.yml  requirements.txt  requirements.txt.local  requirements_kubernetes.txt  tilefunc.sql
svcs/data/misc/: Cargo.toml  Dockerfile.ingest  README.md  ingester.yaml  main.rs  soundscape_provision.py
svcs/data/soundscape/: .helmignore  Chart.yaml  values-backup.yaml  values-production.yaml  values.yaml
svcs/soundscape-authoring/backend/: .gitignore  manage.py  requirements.txt
(+1058 files in other folders)
